WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223267
Web Automation: Web Share menu being open causes hang in `Automation.isShowingJavaScriptDialog`
https://bugs.webkit.org/show_bug.cgi?id=223267
Summary
Web Automation: Web Share menu being open causes hang in `Automation.isShowin...
Patrick Angle
Reported
2021-03-16 11:46:22 PDT
.
Attachments
Patch v1.0
(1.67 KB, patch)
2021-03-16 12:06 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2021-03-16 11:46:49 PDT
<
rdar://74197601
>
Patrick Angle
Comment 2
2021-03-16 12:06:07 PDT
Created
attachment 423376
[details]
Patch v1.0
Blaze Burg
Comment 3
2021-03-16 12:08:13 PDT
Comment on
attachment 423376
[details]
Patch v1.0 r=me
Blaze Burg
Comment 4
2021-03-16 12:55:51 PDT
commit-queue is hitting some tests that flakily time out, but I don't think it's related to this change.
EWS
Comment 5
2021-03-16 13:05:22 PDT
Committed
r274509
: <
https://commits.webkit.org/r274509
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423376
[details]
.
Patrick Angle
Comment 6
2021-03-16 13:06:15 PDT
(In reply to BJ Burg from
comment #4
)
> commit-queue is hitting some tests that flakily time out, but I don't think > it's related to this change.
I agree they appear unrelated, plus I can't see a way that any of these tests could fail based on what this change actually is. The one test that crashed appears to have a history of doing so as well.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug