Web Automation: Web Share menu being open causes hang in `Automation.isShowingJavaScriptDialog` https://bugs.webkit.org/show_bug.cgi?id=223267

Reviewed by BJ Burg.

The Web Share menu should automatically resolve if the page is being controlled by automation and all other
conditions for display are met (we have no reason to reject the promise) in order to prevent hanging an
automation session on a menu that can not be interacted with.

* page/Navigator.cpp:
(WebCore::Navigator::showShareData):


Canonical link: https://commits.webkit.org/235361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274509 268f45cc-cd09-0410-ab3c-d52691b4dbfc